# openbankproject-python-client

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  account_metadata.py  api_collection.py  api_configuration.py  consent.py  counterparty_metadata.py  direct_debit.py  dynamic_endpoint.py  dynamic_entity.py  dynamic_message_doc.py  errors.py  examples.py  kyc.py  pyproject.toml  scheduled_event.py  scope.py  setup.py  standing_order.py  transaction_metadata.py  user.py  view_custom.py  webhook.py  webui_props.py
docs/: build_docs.py  conf.py  index.rst
docs/getting_started/: authentication.rst  quickstart.rst
docs/modules/: openbankproject_client.account_holder.rst  openbankproject_client.account_metadata.rst  openbankproject_client.account_public.rst  openbankproject_client.api_favorite.rst  openbankproject_client.api_management.rst  openbankproject_client.auth.rst  openbankproject_client.branch.rst  openbankproject_client.card.rst  openbankproject_client.fx.rst  (+25 more)
openbankproject_client/: __init__.py  account_access.py  account_application.py  account_holder.py  account_public.py  api_favorite.py  api_management.py  atm.py  auth.py  branch.py  card.py  client.py  connector_method.py  counterparty.py  counterparty_limits.py  customer.py  customer_meeting.py  customer_message.py  dynamic_resource_doc.py  extended_account.py  extended_bank.py  fx.py  metric.py  product.py  role.py  transaction.py  transaction_request.py  user_invitation.py  validate_client.py  view_system.py
openbankproject_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+211 files in other folders)
